--- a/Ejercicio 3/3 Columna.html
+++ b/Ejercicio 3/3 Columna.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="3 Columna.css">
 </head>
 <body>
+	<div class="flex">
 	<header></header>
 	<div class="container">
 	<div id = "columna">
@@ -20,6 +21,7 @@
 	
 	</div>
 	</div>
-	<footer></footer>	 
+	<footer></footer>	
+	</div>
 </body>
 </html>
