--- a/Ejercicio 2/2 Columna.html
+++ b/Ejercicio 2/2 Columna.html
@@ -6,12 +6,13 @@
 <link rel="stylesheet" href="2 Columna.css">
 </head>	
 <body>
+	<div >
 	<header></header>
 	<div class="container">
 	<div class="main"></div>
 	<div class="main"></div>
 	</div>
 	<footer></footer>
-
+</div>
 </body>
 </html>
